# mucs

./: .ccls  .gitignore  CMakeLists.txt  Makefile  README.md  README.old.md  Utils.cmake  cov  runtests  schema.json  scripts-requirements.txt  t-compiles.c  t-no-compiles.c  todo
cpp/: debug.cpp  errors.hpp  execargs.cpp  execargs.hpp  main.cpp  main.hpp  mucs-submit.cpp  util.cpp  util.hpp
examples/config.d/: cs1050.json
examples/submissions/cs1050/: Makefile
include/: date.h
libmucs/: Makefile
libmucs/include/mucs/: except.hpp  random.hpp  temp_file.hpp  util.hpp
libmucs/src/: except.cpp  random.cpp  temp_file.cpp  util.cpp
mucs/: __init__.py  __main__.py  config.py  consts.py  dao.py  exc.py  models.py  mucs  mucs.py  printer.py  roster.xls  submit_wrapper.py  util.py
mucs.old/: submit.orig-clean  submit.strict-constraints  todo  volatile
mucs.old/group/cs1050/submissions/LAB_2/: nelson_a.c
mucs/etc/mucs/: cs1050.json  cs2050.json
mucs/group/mucs/: Makefile
py/: config.py  exc.py  runtest  submit_wrapper.py
py-test/: test_utils.py
py-test/config/: test_homeworks.py  test_labsesh.py  test_labsessions.py  test_roster.py
py/mucs/: config.py  submit_wrapper.py
py/test/: test_utils.py
py/test/config/: test_labsessions.py
scripts/: compile  count-lines  findall  fzf-roster  fzf-student  fzf-submit  gen-roster  get-course-students  install-fix-perms  moss-report  mucs  mucs-gen-roster  mucs-update-roster  post-install  simple-compile  student-vimrc  verify-groups
src/: cli.cpp  cli.hpp  config.cpp  config.hpp  configs.cpp  configs.hpp  consts.cpp  consts.hpp  courseconfig.cpp  courseconfig.hpp  exc.cpp  exc.hpp  except.cpp  except.hpp  exec.cpp  exec.hpp  execargs.cpp  execargs.hpp  homeworks.cpp  homeworks.hpp  lab-assignments.cpp  lab-sessions.cpp  labs.cpp  labs.hpp  labsessions.cpp  labsessions.hpp  main.cpp  main.hpp  mucs-admin.cpp  mucs-cli.cpp  mucs-submit.cpp  mucs-util.cpp  mucs-version.cpp  mucs.cpp  mucs.hpp  path.cpp  path.hpp  printer.cpp  printer.hpp  proc.cpp  (+15 more)
src/models/: config.cpp  config.hpp  homeworks.cpp  lab-assignments.cpp  lab-sessions.cpp  overrides.cpp  roster.cpp
test/: main.cpp  main.hpp  random.cpp  random.hpp  runall  test_cli.cpp  test_cli.hpp  test_config.cpp  test_config.hpp  test_configs.cpp  test_configs.hpp  test_courseconfig.cpp  test_courseconfig.hpp  test_except.cpp  test_except.hpp  test_homeworks.cpp  test_homeworks.hpp  test_lab_assignments.cpp  test_lab_assignments.hpp  test_lab_sessions.cpp  test_lab_sessions.hpp  test_labs.cpp  test_labs.hpp  test_labsessions.cpp  test_labsessions.hpp  test_main.cpp  test_main.hpp  test_models.py  test_mucs_admin.cpp  test_mucs_admin.hpp  test_mucs_cli.cpp  test_mucs_cli.hpp  test_mucs_submit.cpp  test_mucs_submit.hpp  test_overrides.cpp  test_overrides.hpp  test_roster.cpp  test_roster.hpp  test_submit.cpp  test_submit.hpp  (+5 more)
test/config/: test_homeworks.py  test_labsesh.py  test_labsessions.py  test_roster.py
test_root/config.d/: 1050
test_root/roster/: A  B
